# Slik

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
resources/html/: markdown_template.html
resources/info/: shortcuts.md  start.md
resources/stylesheets/: slik_dark.css
resources/tree_sitter/: python_highlights.scm
src/: imports.py  lib.rs
src/editor/: auto_completer.py  custom_lexers.py  editor.py  html_viewer.py  lexers.py  markdown_viewer.py
src/framework/: completer.rs  file.rs  file_ops.rs  lsp.rs  mod.rs
src/framework/file_system/: read_file.rs  write_file.rs
src/framework/indexing/: get_path.rs  hash_file.rs  index_project.rs  is_x.rs  mod.rs  search_contents.rs  search_files.rs  search_project.rs  should_skip.rs
src/framework/language_server/: lsp.rs
src/gui/: configure_bar.py  file_browser.py  file_contents_searcher.py  file_searcher.py  input_dialog.py  message_dialog.py  move_dialog.py  new_file.py  python_path_selector.py  run_type_selector.py  tab.py  tab_view.py  terminal.py  terminal_view.py  title_bar.py
src/managers/: lsp_manager.py  project_manager.py  terminal_manager.py
