[package]
name = "Slik"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "slik"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
ra_ap_ide = "0.0.204"
ra_ap_vfs = "0.0.204"
ra_ap_base_db = "0.0.204"
ra_ap_text_edit = "0.0.204"
