[package]
name = "Slik"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "slik"
crate-type = ["cdylib"]

[dependencies]
walkdir = "2"
pyo3 = { version = "0.24.0", features = ["extension-module"] }
sha1 = "0.10.6"
